<resources>
    <string name="app_name">currency-converter</string>
    <string name="welcome_text">Currency Converter</string>
    <string name="enter_amount">Enter amount of money</string>
    <string name="arrow_description">Arrow facing right side of screen</string>
    <string name="exchange">EXCHANGE</string>
    <string name="default_usd">USD</string>
    <string name="default_eur">EUR</string>
    <string name="country_item_image">Country item image</string>
    <string name="navigates_to_first_screen">Navigates to first screen</string>
    <string name="last_update">Last update:</string>
    <string name="next_update">Next update:</string>
    <string name="check_internet_connection">Please, check Internet connection.</string>
    <string name="no_connection">no connection</string>
</resources>