<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/design_default_color_surface"
    tools:context=".presentation.home.HomeFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="@dimen/small_padding"
        android:fontFamily="@font/robotoslab_bold"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/currency_spinners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:padding="@dimen/small_padding"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/initialCurrencySpinner"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            style="@style/SpinnerStyle" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:contentDescription="@string/arrow_description"
            android:src="@drawable/baseline_arrow_right_alt_24" />

        <Spinner
            android:id="@+id/desiredCurrencySpinner"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            style="@style/SpinnerStyle" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/moneyTextField"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/currency_spinners"
        android:hint="@string/enter_amount"
        android:padding="@dimen/small_padding" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/moneyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab_regular"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exchange_btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moneyTextField"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/small_padding"
        android:layout_marginTop="15dp"
        android:stateListAnimator="@null"
        android:text="@string/exchange"
        style="@style/ButtonStyle" />

    <LinearLayout
        android:id="@+id/no_internet_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:alpha="0.9"
        android:background="@drawable/no_internet_connection_bg"
        android:orientation="vertical"
        android:padding="24dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/no_connection_imageview"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:contentDescription="@string/no_connection"
            android:src="@drawable/no_internet_connection_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/check_internet_connection"
            android:textColor="@color/text_color"
            android:alpha="0.75"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>