<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/navigation_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/navigates_to_first_screen"
        android:scaleType="fitXY"
        android:background="@null"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/navigation_back"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="@color/card_bg_color"
        app:cardCornerRadius="8dp" >

        <RelativeLayout
            android:id="@+id/relative_layout_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp" >

            <TextView
                android:id="@+id/initial_currency_code"
                style="@style/BoldTextViewStyle"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="12dp"
                android:textSize="36sp"
                tools:text="USD:" />

            <TextView
                android:id="@+id/desired_currency_code"
                style="@style/BoldTextViewStyle"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="12dp"
                android:textSize="36sp"
                tools:text="EUR:" />

            <TextView
                android:id="@+id/initial_amount"
                style="@style/RegularTextViewStyle"
                android:layout_below="@+id/initial_currency_code"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="12dp"
                android:textAlignment="textStart"
                tools:text="1000"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="32sp"
                app:autoSizeStepGranularity="2sp" />

            <TextView
                android:id="@+id/exchanged_amount"
                style="@style/RegularTextViewStyle"
                android:layout_below="@+id/desired_currency_code"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="12dp"
                android:textAlignment="textEnd"
                tools:text="943.37"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="32sp"
                app:autoSizeStepGranularity="2sp" />

            <TextView
                android:id="@+id/last_update_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RegularTextViewStyle"
                android:layout_below="@+id/initial_amount"
                android:layout_alignParentStart="true"
                android:layout_marginTop="50dp"
                android:layout_marginStart="12dp"
                android:alpha="0.7"
                android:text="@string/last_update"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/last_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RegularTextViewStyle"
                android:layout_below="@+id/last_update_title"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:alpha="0.7"
                tools:text="Sun, 21 Jul 2024 00:00:01"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/next_update_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RegularTextViewStyle"
                android:layout_below="@+id/exchanged_amount"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="12dp"
                android:alpha="0.7"
                android:text="@string/next_update"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/next_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RegularTextViewStyle"
                android:layout_below="@+id/next_update_title"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:alpha="0.7"
                tools:text="Mon, 22 Jul 2024 00:00:01"
                android:textSize="12sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>